# logitempmatrix

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  logitempmatrix.cc
